--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,7 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
+
+# Project Specific - gitignoring inputs and outputs as they are too big for git and can be built through code
+input/
+output/
