--- a/.gitignore
+++ b/.gitignore
@@ -38,8 +38,17 @@ vignettes/*.pdf
 # R Environment Variables
 .Renviron
 
-# Project Specific - gitignoring inputs and outputs as they are too big for git and can be built through code
-input/
+# Project Specific - gitignoring inputs as they are too big for git and can be built through code
+acoustic/**/input/
+point_counts/**/input/
+# Data dependency symlinks
+models/input/*
+!models/input/aru2point.csv
+!models/input/dataML_tall.csv
+!models/input/latlong.csv
+!models/input/PC_delinted.csv
+
+# Project Specific - gitignoring outputs as they are too big for git and can be built through code
 output/
 
 # Jupyter scratch directory
