EMERGENCY must include input in the .gitignore or we syncronize many data files we are trying to ignore, not sure where the new .gitignore comes from but we all need the same one that ignores everything we want it to...

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,7 @@ models/input/*
 !models/input/PC_delinted.csv
 
 # Project Specific - gitignoring outputs as they are too big for git and can be built through code
+input/
 output/
 
 # Jupyter scratch directory
